# 2D-Flowfield-Research-Project

./: .gitignore  AStar.cpp  Agent.cpp  Agent.h  CMakeLists.txt  Defines.h  Flowfields.cpp  Flowfields.h  Flowfields.rc  Flowfields.sln  Flowfields.vcxproj  Flowfields.vcxproj.filters  GameWinMain.cpp  Graph.cpp  Graph.h  GraphConnection.cpp  GraphNode.cpp  GraphNode.h  Grid.cpp  Grid.h  GridSector.cpp  GridSector.h  Portal.h  README.md  Utils.h
Engine/: AbstractGame.cpp  CMakeLists.txt  GameEngine.cpp  GameEngine.h  GameWinMain.cpp
Engine/Private/: GameEngine.cpp  GameWinMain.cpp
Engine/Public/: Flowfields.rc  GameEngine.h
Flowfield/: Flowfields.cpp  Flowfields.h
Flowfield/Grid/: Grid.cpp  Grid.h  GridSector.cpp  GridSector.h
Flowfields/: CMakeLists.txt
Flowfields/Private/: Agent.cpp  pch.h
Flowfields/Private/Flowfield/: Flowfields.cpp
Flowfields/Private/Flowfield/Grid/: Grid.cpp  GridSector.cpp
Flowfields/Private/Graph/: Graph.cpp  GraphConnection.cpp  GraphNode.cpp
Flowfields/Private/Pathfinding/: AStar.cpp
Flowfields/Public/: Agent.h  DebugSettings.h  Defines.h  Utils.h
Flowfields/Public/Flowfield/: Flowfields.h
Flowfields/Public/Flowfield/Grid/: Grid.h  GridSector.h
Flowfields/Public/Flowfield/Portal/: Portal.h
Flowfields/Public/Graph/: Graph.h  GraphConnection.h  GraphNode.h
Flowfields/Public/Pathfinding/: AStar.h
Graph/: Graph.cpp  GraphConnection.cpp  GraphNode.cpp
MapEditor/: MapEditor.cpp  MapEditor.h
Pathfinding/: AStar.cpp
UI/: UI.cpp  UI.h  UIElement.cpp  UIElement.h  UIScreen.cpp  UIScreen.h
